force-app/main/default/objects/Paiement__c/Paiement__c.object-meta.xml
<CustomObject>
    <description>Objet pour gérer les paiements</description>
    <label>Paiement</label>
    <nameField>
        <displayFormat>PAIE-{0000}</displayFormat>
        <label>Numéro de paiement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paiements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>