force-app/main/default/objects/Paiement__c/fields/Annee_Concernee__c.field-meta.xml
<CustomField>
    <fullName>Annee_Concernee__c</fullName>
    <formula>SUBSTITUTE(TEXT(YEAR(Periode_Debut__c)), &quot; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année Concernée</label>
    <type>Text</type>
</CustomField>