force-app/main/default/objects/Paiement__c/fields/Bail__c.field-meta.xml
<CustomField>
    <fullName>Bail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Bail associé au paiement</description>
    <label>Bail</label>
    <referenceTo>Bail__c</referenceTo>
    <relationshipLabel>Paiements</relationshipLabel>
    <relationshipName>Paiements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>