force-app/main/default/objects/Paiement__c/fields/Bien_Locatif__c.field-meta.xml
<CustomField>
    <fullName>Bien_Locatif__c</fullName>
    <formula>Bail__r.Bien_Locatif__r.Name</formula>
    <label>Bien Locatif</label>
    <type>Text</type>
</CustomField>