force-app/main/default/objects/Paiement__c/fields/Date_Encaissement__c.field-meta.xml
<CustomField>
    <fullName>Date_Encaissement__c</fullName>
    <label>Date Encaissement</label>
    <type>Date</type>
</CustomField>