force-app/main/default/objects/Paiement__c/fields/Date_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Date_Paiement__c</fullName>
    <label>Date Paiement</label>
    <type>Date</type>
</CustomField>