force-app/main/default/objects/Paiement__c/fields/Depense__c.field-meta.xml
<CustomField>
    <fullName>Depense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dépense</label>
    <referenceTo>Depense__c</referenceTo>
    <relationshipLabel>Paiements</relationshipLabel>
    <relationshipName>Paiements</relationshipName>
    <type>Lookup</type>
</CustomField>