force-app/main/default/objects/Paiement__c/fields/FraisAgence__c.field-meta.xml
<CustomField>
    <fullName>FraisAgence__c</fullName>
    <formula>Depense__r.Montant_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frais D&apos;agence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>