force-app/main/default/objects/Paiement__c/fields/Locataire__c.field-meta.xml
<CustomField>
    <fullName>Locataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Locataire associé au paiement</description>
    <label>Locataire</label>
    <referenceTo>Locataire__c</referenceTo>
    <relationshipLabel>Paiements</relationshipLabel>
    <relationshipName>Paiements</relationshipName>
    <type>Lookup</type>
</CustomField>