force-app/main/default/objects/Paiement__c/fields/Montant_Charges__c.field-meta.xml
<CustomField>
    <fullName>Montant_Charges__c</fullName>
    <label>Montant Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>