force-app/main/default/objects/Paiement__c/fields/Montant_Loyer__c.field-meta.xml
<CustomField>
    <fullName>Montant_Loyer__c</fullName>
    <label>Montant Loyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>