force-app/main/default/objects/Paiement__c/fields/Montant_Total__c.field-meta.xml
<CustomField>
    <fullName>Montant_Total__c</fullName>
    <formula>Montant_Loyer__c +  Montant_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>