force-app/main/default/objects/Paiement__c/fields/MontantEncaisse__c.field-meta.xml
<CustomField>
    <fullName>MontantEncaisse__c</fullName>
    <formula>Montant_Total__c- FraisAgence__c</formula>
    <label>Montant Encaissé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>