force-app/main/default/objects/Paiement__c/fields/Moyen_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Moyen_Paiement__c</fullName>
    <label>Moyen de Paiement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virement</fullName>
                <default>true</default>
                <label>Virement</label>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Espèces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>