force-app/main/default/objects/Paiement__c/fields/NumeroMandat__c.field-meta.xml
<CustomField>
    <fullName>NumeroMandat__c</fullName>
    <formula>Bail__r.NumeroMandat__c</formula>
    <label>Numéro Mandat</label>
    <type>Text</type>
</CustomField>