force-app/main/default/objects/Paiement__c/fields/Periode_Debut__c.field-meta.xml
<CustomField>
    <fullName>Periode_Debut__c</fullName>
    <label>Période Début</label>
    <type>Date</type>
</CustomField>