force-app/main/default/objects/Paiement__c/fields/Quittance_Generee__c.field-meta.xml
<CustomField>
    <fullName>Quittance_Generee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quittance Générée</label>
    <type>Checkbox</type>
</CustomField>