force-app/main/default/objects/Paiement__c/fields/Reference_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Reference_Paiement__c</fullName>
    <label>Référence Paiement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>