force-app/main/default/objects/Paiement__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Encaissé</fullName>
            </value>
            <value>
                <fullName>Rejeté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>