force-app/main/default/objects/Paiement__c/fields/Statut_Icon__c.field-meta.xml
<CustomField>
    <fullName>Statut_Icon__c</fullName>
    <formula>IF(
    ISPICKVAL(Statut__c, 'Encaissé'),
    IMAGE('/img/samples/flag_green.gif', 'Encaissé', 16, 16),
    IMAGE('/img/samples/flag_red.gif', 'Non Encaissé', 16, 16)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut Icon</label>
    <type>Text</type>
</CustomField>