force-app/main/default/objects/Paiement__c/listViews/X12_Rue_de_la_m_lonni_re.listView-meta.xml
<ListView>
    <fullName>X12_Rue_de_la_m_lonni_re</fullName>
    <columns>Statut_Icon__c</columns>
    <columns>NAME</columns>
    <columns>Locataire__c</columns>
    <columns>Statut__c</columns>
    <columns>Annee_Concernee__c</columns>
    <columns>Mois_Concerne__c</columns>
    <columns>Date_Paiement__c</columns>
    <columns>Moyen_Paiement__c</columns>
    <columns>Montant_Charges__c</columns>
    <columns>Montant_Loyer__c</columns>
    <columns>Montant_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bien_Locatif__c</field>
        <operation>equals</operation>
        <value>12 Rue de la mélonnière</value>
    </filters>
    <filters>
        <field>Annee_Concernee__c</field>
        <operation>equals</operation>
        <value>2026</value>
    </filters>
    <label>12 Rue de la mélonnière</label>
</ListView>